<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/task_add_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_task"
        style="@style/Task_Title_New"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/task_add_save_btn"
        style="@style/Task_New_Button_Save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/task_add_desc_et"
        app:layout_constraintTop_toTopOf="@+id/task_add_date_btn" />

    <EditText
        android:id="@+id/task_add_title_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/task_title_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/task_add_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/task_add_title_tv"
        android:autofillHints="" />

    <EditText
        android:id="@+id/task_add_desc_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textLongMessage"
        app:layout_constraintEnd_toEndOf="@+id/task_add_title_et"
        app:layout_constraintStart_toStartOf="@+id/task_add_title_et"
        app:layout_constraintTop_toBottomOf="@+id/task_add_title_et"
        android:autofillHints="" />

    <Button
        android:id="@+id/task_add_date_btn"
        style="@style/Task_New_Button_Date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        tools:text="13:33, 23 Jan 2021, Sat"
        app:layout_constraintEnd_toStartOf="@+id/task_add_save_btn"
        app:layout_constraintStart_toStartOf="@+id/task_add_desc_et"
        app:layout_constraintTop_toBottomOf="@+id/task_add_date_tv" />

    <TextView
        android:id="@+id/task_add_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/complete_before"
        app:layout_constraintStart_toStartOf="@+id/task_add_desc_et"
        app:layout_constraintTop_toBottomOf="@+id/task_add_desc_et" />
</androidx.constraintlayout.widget.ConstraintLayout>